moved from vanilla to react

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+body {
+  /*background: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);*/
+
+  /*background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/075/517/original/Warriors___Thor__Ragnarok__4__-_III%29_Prologue__Warriors.gif?1680799032");
+  */
+  background-size: 100%;
+}
+.morning {
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/075/517/original/Warriors___Thor__Ragnarok__4__-_III%29_Prologue__Warriors.gif?1680799032");
+  background-size: 100%;
+}
+.evening {
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/075/521/original/Photography_GIF_by_Living_Stills_-_Find___Share_on_GIPHY.gif?1680800988");
+  background-size: 100%;
+}
+.night {
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/075/671/original/linistars.gif?1680885396");
+  background-size: 100%;
+}
+
+a:link {
+  text-decoration: none;
+  color: #5e63b6;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #5e63b6;
+}
+
+h1,
+h2 {
+  margin-top: -10px;
+  color: #27296d;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  text-align: center;
+  margin-top: 10px;
+  color: whitesmoke;
+  text-shadow: whitesmoke;
 }
